apps/demo-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo
  namespace: tech-demo
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: nginx-demo

  template:
    metadata:
      labels:
        app: nginx-demo

    spec:
      securityContext:
        allowPrivilegeEscalation: false

      containers:
      - name: nginx
        image: nginx:1.25

        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10

        securityContext:
          allowPrivilegeEscalation: false
