apps/demo-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: tech-demo
spec:
  selector:
    app: nginx-demo

  ports:
  - port: 80
    targetPort: 80
