apps/demo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: tech-demo

spec:
  defaultBackend:
    service:
      name: nginx-service
      port:
        number: 80
